--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,23 @@
-Doctype HTML 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fullscreen iFrame</title>
+    <style>
+        html, body {
+            margin: 0;
+            height: 100%;
+        }
+        iframe {
+            border: none;
+            height: 100%;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
+    <iframe src="https://www.example.com"></iframe>
+</body>
+</html>
+
