--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
     </style>
 </head>
 <body>
-    <iframe src="https://www.example.com"></iframe>
+    <iframe src="https://chatgpt.com"></iframe>
 </body>
 </html>
 
